# 2dEngine

./: CMakeLists.txt
include/Core/: Application.h  Engine.h  Entry.h  OpenGLWindow.h  Window.h
include/Platform/OpenGL/: OpenGLWindow.h
src/: Application.cpp  OpenGLWindow.cpp
